# twitter-years

./: .coveragerc  .gitignore  LICENSE-APACHE  LICENSE-MIT  README.rst  pyproject.toml  requirements.txt  setup.py
notebooks/: 01-series.ipynb
notebooks/.ipynb_checkpoints/: 01-series-checkpoint.ipynb
twitter_years/: models.py
