[metadata]
name = 'twitter-years'
version = '0.0.1'
description = ''
author = 'David McClure'
author_email = 'davidwilliammcclure@gmail.com'
license = 'MIT/Apache-2.0'
url = 'https://github.com/_/twitter-years'

[requires]
python_version = ['2.7', '3.5', '3.6', 'pypy', 'pypy3']

[build-system]
requires = ['setuptools', 'wheel']

[tool.hatch.commands]
prerelease = 'hatch build'
